# dialbetesai-ml-finalwork

./: README.md  Relatorio-DiabetesAI.docx
backend/: README.md  pyproject.toml
backend/jupyter/: referencia_diabetes_classificacao_completa.ipynb  trabalho-final.ipynb
backend/modelos/: diabetes_melhor_modelo.pkl  diabetes_scaler.pkl
backend/src/: main.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: DiabetesForm.jsx  PredictionResult.jsx
